<resources>
    <string name="app_name">X9</string>
    <string name="report_title_placeholder">Title...</string>
    <string name="description_placeholder">Description...</string>

    <string name="button_mild">Mild</string>
    <string name="button_sever">Sever</string>
    <string name="button_emergency">Emergency</string>
    <string name="button_send">Send</string>
    <string name="button_ask_permission">Ask for location permission</string>

    <string name="button_goto_report">New report</string>
    <string name="button_goto_main">Back to main</string>

    <string name="fragment_button_main">Main</string>
    <string name="fragment_button_report">Report</string>

    <string name="logout_text">Logout</string>

    <string name="update_report_text">Update Report</string>
    <string name="create_report_text">Create Report</string>
    <string name="button_update">Update</string>

    <string name="preference_file_key">dk.itu.moapd.x9.ADJU.PREFERENCE_FILE_KEY</string>
    <string name="text_not_available">Not available</string>
    <string name="text_speed_km">%d KM</string>
    <string name="text_latitude">Latitude</string>
    <string name="text_longitude">Longitude</string>
    <string name="text_altitude">Altitude</string>
    <string name="text_speed">Speed</string>
    <string name="text_time">Time</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="notification_channel_name">Location Tracking</string>
    <string name="notification_channel_description">Notifications for location tracking service</string>
    <string name="notification_title">Tracking Location</string>
    <string name="notification_text">Location updates are active</string>

    <string name="map_navigation">Map</string>
    <string name="edit_report_navigation">Edit report</string>

    <string name="take_pic_button_text">Take picture</string>

    <string name="default_weather_text">No location given</string>


    <string
        name="google_maps_key"
        templateMergeStrategy="preserve"
        translatable="false">AIzaSyBDhSuW1fdl2C4vtr62CIHQPr7_5BpT_M8</string>


    <string name="permission_denied_message">Location permission is required to track your location</string>

    <string-array name="report_type_array">
        <item>Broken traffic light</item>
        <item>Car crash</item>
        <item>Flooding</item>
        <item>Speed camera</item>
        <item>Blockage</item>
        <item>Slippery road</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>