<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/report_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateReportFragment"
    android:theme="@style/Theme.AppCompat">

    <EditText
        android:id="@+id/report_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/report_title_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Spinner
        android:id="@+id/report_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/light_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintTop_toBottomOf="@+id/report_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_placeholder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_type"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_mild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button_mild"
        android:textColor="@color/light_green"
        tools:ignore="ButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sever"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button_sever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sever"
        android:textColor="@color/light_green"
        tools:ignore="ButtonStyle"
        app:layout_constraintStart_toEndOf="@+id/button_mild"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_mild" />

    <Button
        android:id="@+id/button_emergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_emergency"
        android:textColor="@color/light_green"
        tools:ignore="ButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mild" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:textColor="@color/light_green"
        tools:ignore="ButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_emergency" />

    <Button
        android:id="@+id/button_goto_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button_goto_main"
        android:textColor="@color/light_green"
        tools:ignore="ButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"/>




</androidx.constraintlayout.widget.ConstraintLayout>